// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test cars data retrieval should get cars from db with filter, pagination and sorting 1`] = `
Object {
  "data": Array [
    Object {
      "company_id": 1753520,
      "dkn": "СА5375ХМ",
      "id": 1490009,
      "mark_name": "Volkswagen",
      "model_name": "Golf",
      "person_id": 1753520,
      "produce_year": 1994,
      "rama": "WVWZZZ1HZRW464701",
    },
    Object {
      "company_id": 1556492,
      "dkn": "СА8652ХВ",
      "id": 2134851,
      "mark_name": "Volkswagen",
      "model_name": "Golf",
      "person_id": 1556492,
      "produce_year": 2002,
      "rama": "WVWZZZ1JZ1B173308",
    },
    Object {
      "company_id": 1468442,
      "dkn": "СА2525ВК",
      "id": 2143856,
      "mark_name": "Toyota",
      "model_name": "RAV-4",
      "person_id": 1468442,
      "produce_year": 2004,
      "rama": "JTEHG20V306040443",
    },
    Object {
      "company_id": 1552797,
      "dkn": "СА8346ХВ",
      "id": 2168514,
      "mark_name": "Audi",
      "model_name": "A8",
      "person_id": 1552797,
      "produce_year": 2004,
      "rama": "WAUZZZ4E94N020180",
    },
    Object {
      "company_id": 112645,
      "dkn": "СА8393ХВ",
      "id": 2169761,
      "mark_name": "Audi",
      "model_name": "A6",
      "person_id": 112645,
      "produce_year": 2000,
      "rama": "WAUZZZ4BZYN098915",
    },
    Object {
      "company_id": 264536,
      "dkn": "СА1309А",
      "id": 2189941,
      "mark_name": "0",
      "model_name": "Друг ...",
      "person_id": 264536,
      "produce_year": 2001,
      "rama": "JYARP041000004589",
    },
    Object {
      "company_id": 1582154,
      "dkn": "СА0218ХН",
      "id": 2312244,
      "mark_name": "Volkswagen",
      "model_name": "Caddy",
      "person_id": 1582154,
      "produce_year": 2007,
      "rama": "WV2ZZZ2KZ8X059506",
    },
    Object {
      "company_id": 92082,
      "dkn": "СА7568ХН",
      "id": 2357383,
      "mark_name": "Citroen",
      "model_name": "Друг ...",
      "person_id": 92082,
      "produce_year": 2005,
      "rama": "VF7LC9HXC74172495",
    },
    Object {
      "company_id": 1815922,
      "dkn": "СА1453ХР",
      "id": 2378536,
      "mark_name": "BMW",
      "model_name": "Друг ...",
      "person_id": 1815922,
      "produce_year": 1991,
      "rama": "WBACA31030EG37316",
    },
    Object {
      "company_id": 1518384,
      "dkn": "СА5376ХР",
      "id": 2401528,
      "mark_name": "Seat",
      "model_name": "Ibiza",
      "person_id": 1518384,
      "produce_year": 1995,
      "rama": "VSSZZZ6KZZR737515",
    },
  ],
  "total": 18,
}
`;

exports[`Test cars data retrieval should get cars from db with id 1`] = `
Object {
  "data": Object {
    "company_id": null,
    "dkn": "CA4918KM",
    "id": 4601,
    "mark_name": "Volkswagen",
    "model_name": "Passat",
    "person_id": null,
    "produce_year": 1992,
    "rama": "YGHJHKLLOLIHGHG",
  },
}
`;

exports[`Test cars data retrieval should get cars from db with ids 1`] = `
Object {
  "data": Array [
    Object {
      "company_id": null,
      "dkn": "CA4918KM",
      "id": 4601,
      "mark_name": "Volkswagen",
      "model_name": "Passat",
      "person_id": null,
      "produce_year": 1992,
      "rama": "YGHJHKLLOLIHGHG",
    },
    Object {
      "company_id": null,
      "dkn": "CA7474KA",
      "id": 4602,
      "mark_name": "Audi",
      "model_name": "A8",
      "person_id": null,
      "produce_year": 2008,
      "rama": "WVWEZZZ1HZRW206119",
    },
  ],
}
`;

exports[`Test cars data retrieval should get cars from db with pagination 1`] = `
Object {
  "data": Array [
    Object {
      "company_id": null,
      "dkn": "CA4918KM",
      "id": 4601,
      "mark_name": "Volkswagen",
      "model_name": "Passat",
      "person_id": null,
      "produce_year": 1992,
      "rama": "YGHJHKLLOLIHGHG",
    },
    Object {
      "company_id": null,
      "dkn": "CA7474KA",
      "id": 4602,
      "mark_name": "Audi",
      "model_name": "A8",
      "person_id": null,
      "produce_year": 2008,
      "rama": "WVWEZZZ1HZRW206119",
    },
  ],
  "total": 1376287,
}
`;

exports[`Test cars data retrieval should get cars from db with pagination and sorting 1`] = `
Object {
  "data": Array [
    Object {
      "company_id": null,
      "dkn": "CA4918KM",
      "id": 4601,
      "mark_name": "Volkswagen",
      "model_name": "Passat",
      "person_id": null,
      "produce_year": 1992,
      "rama": "YGHJHKLLOLIHGHG",
    },
    Object {
      "company_id": null,
      "dkn": "CA7474KA",
      "id": 4602,
      "mark_name": "Audi",
      "model_name": "A8",
      "person_id": null,
      "produce_year": 2008,
      "rama": "WVWEZZZ1HZRW206119",
    },
  ],
  "total": 1376287,
}
`;

exports[`Test companies data retrieval should get companies from db with id 1`] = `
Object {
  "data": Object {
    "apartment": 0,
    "blok": "0",
    "bulstat": "175153616",
    "car_ids": Array [
      6001,
      1687957,
      1863595,
    ],
    "city": "ЛОЗЕН",
    "client_name": "Бонев Транс ЕООД  ",
    "floor": 0,
    "id": 9351,
    "mobile": "0",
    "municipality_name": "Столична",
    "phone": "0",
    "postcode": 1151,
    "region_name": "София (столица)",
    "representative": "Генади Стефанов Бонев",
    "street_name": "ЯНКО ПАНАЙОТОВ",
    "street_no": "28",
    "vhod": "0",
  },
}
`;

exports[`Test companies data retrieval should get companies from db with ids 1`] = `
Object {
  "data": Array [
    Object {
      "apartment": 0,
      "blok": "0",
      "bulstat": "175153616",
      "car_ids": Array [
        6001,
        1687957,
        1863595,
      ],
      "city": "ЛОЗЕН",
      "client_name": "Бонев Транс ЕООД  ",
      "floor": 0,
      "id": 9351,
      "mobile": "0",
      "municipality_name": "Столична",
      "phone": "0",
      "postcode": 1151,
      "region_name": "София (столица)",
      "representative": "Генади Стефанов Бонев",
      "street_name": "ЯНКО ПАНАЙОТОВ",
      "street_no": "28",
      "vhod": "0",
    },
    Object {
      "apartment": 27,
      "blok": "1",
      "bulstat": "130988423",
      "car_ids": Array [],
      "city": "СОФИЯ",
      "client_name": "\\" Мечкуеви Ко \\" ООД  ",
      "floor": 2,
      "id": 9851,
      "mobile": "0",
      "municipality_name": "Столична",
      "phone": "0",
      "postcode": 1000,
      "region_name": "София (столица)",
      "representative": "",
      "street_name": "Незабравка",
      "street_no": "1",
      "vhod": "Б",
    },
  ],
}
`;

exports[`Test companies data retrieval should get companies from db with pagination 1`] = `
Object {
  "data": Array [
    Object {
      "apartment": 0,
      "blok": "0",
      "bulstat": "131304899",
      "car_ids": Array [
        6003,
        6157,
        7368,
        534737,
        828833,
        829572,
        829929,
        1528401,
        1564742,
        1623274,
        1651107,
        1655869,
        1661547,
        1674812,
        1676459,
        1687766,
        1746879,
        1749209,
        1755759,
        1778061,
        1791273,
        1808684,
        1817960,
        1837693,
        1837696,
        1841973,
        1886048,
        1905375,
        1926652,
        2013426,
        2110795,
        2114331,
        2207729,
        2234344,
        2261575,
        2316075,
        2325492,
        2433843,
        2465044,
        2500953,
        2542927,
        2603590,
        2621869,
        2952511,
      ],
      "city": "СОФИЯ",
      "client_name": "СИ ЕФ ЕМ ООД  ",
      "floor": 0,
      "id": 9251,
      "mobile": "359889100001",
      "municipality_name": "Столична",
      "phone": "359889100001",
      "postcode": 1000,
      "region_name": "София (столица)",
      "representative": "1",
      "street_name": "УЛ. НИКОЛАЙ ХАЙТОВ БЛ. 2, ВХ. Д, ОФИСИ 8 И 9",
      "street_no": "0",
      "vhod": "0",
    },
    Object {
      "apartment": 0,
      "blok": "0",
      "bulstat": "175153616",
      "car_ids": Array [
        6001,
        1687957,
        1863595,
      ],
      "city": "ЛОЗЕН",
      "client_name": "Бонев Транс ЕООД  ",
      "floor": 0,
      "id": 9351,
      "mobile": "0",
      "municipality_name": "Столична",
      "phone": "0",
      "postcode": 1151,
      "region_name": "София (столица)",
      "representative": "Генади Стефанов Бонев",
      "street_name": "ЯНКО ПАНАЙОТОВ",
      "street_no": "28",
      "vhod": "0",
    },
  ],
  "total": 78689,
}
`;

exports[`Test companies data retrieval should get companies from db with pagination and sorting 1`] = `
Object {
  "data": Array [
    Object {
      "apartment": 0,
      "blok": "0",
      "bulstat": "131304899",
      "car_ids": Array [
        6003,
        6157,
        7368,
        534737,
        828833,
        829572,
        829929,
        1528401,
        1564742,
        1623274,
        1651107,
        1655869,
        1661547,
        1674812,
        1676459,
        1687766,
        1746879,
        1749209,
        1755759,
        1778061,
        1791273,
        1808684,
        1817960,
        1837693,
        1837696,
        1841973,
        1886048,
        1905375,
        1926652,
        2013426,
        2110795,
        2114331,
        2207729,
        2234344,
        2261575,
        2316075,
        2325492,
        2433843,
        2465044,
        2500953,
        2542927,
        2603590,
        2621869,
        2952511,
      ],
      "city": "СОФИЯ",
      "client_name": "СИ ЕФ ЕМ ООД  ",
      "floor": 0,
      "id": 9251,
      "mobile": "359889100001",
      "municipality_name": "Столична",
      "phone": "359889100001",
      "postcode": 1000,
      "region_name": "София (столица)",
      "representative": "1",
      "street_name": "УЛ. НИКОЛАЙ ХАЙТОВ БЛ. 2, ВХ. Д, ОФИСИ 8 И 9",
      "street_no": "0",
      "vhod": "0",
    },
    Object {
      "apartment": 0,
      "blok": "0",
      "bulstat": "175153616",
      "car_ids": Array [
        6001,
        1687957,
        1863595,
      ],
      "city": "ЛОЗЕН",
      "client_name": "Бонев Транс ЕООД  ",
      "floor": 0,
      "id": 9351,
      "mobile": "0",
      "municipality_name": "Столична",
      "phone": "0",
      "postcode": 1151,
      "region_name": "София (столица)",
      "representative": "Генади Стефанов Бонев",
      "street_name": "ЯНКО ПАНАЙОТОВ",
      "street_no": "28",
      "vhod": "0",
    },
  ],
  "total": 78689,
}
`;

exports[`Test people data retrieval should get people from db with id 1`] = `
Object {
  "data": Object {
    "apartment": 2,
    "blok": "18",
    "car_ids": Array [],
    "city": "СИЛИСТРА",
    "client_name": "First Middle Last",
    "egn": "6310305565",
    "floor": 1,
    "id": 9219,
    "mobile": "0891043493",
    "municipality_name": "Силистра",
    "phone": "02830123",
    "postcode": 7500,
    "region_name": "СИЛИСТРА",
    "representative": "",
    "street_name": "ГЕНЕРАЛ  СКОБЕЛЕВ",
    "street_no": "",
    "vhod": "А",
  },
}
`;

exports[`Test people data retrieval should get people from db with ids 1`] = `
Object {
  "data": Array [
    Object {
      "apartment": 2,
      "blok": "18",
      "car_ids": Array [],
      "city": "СИЛИСТРА",
      "client_name": "First Middle Last",
      "egn": "6310305565",
      "floor": 1,
      "id": 9219,
      "mobile": "0891043493",
      "municipality_name": "Силистра",
      "phone": "02830123",
      "postcode": 7500,
      "region_name": "СИЛИСТРА",
      "representative": "",
      "street_name": "ГЕНЕРАЛ  СКОБЕЛЕВ",
      "street_no": "",
      "vhod": "А",
    },
    Object {
      "apartment": 7,
      "blok": "9",
      "car_ids": Array [],
      "city": "СОФИЯ",
      "client_name": "Николинка Стефанова Цолова",
      "egn": "5507181593",
      "floor": 4,
      "id": 9451,
      "mobile": "0897527002",
      "municipality_name": "Столична",
      "phone": "0888998899",
      "postcode": 1000,
      "region_name": "София (столица)",
      "representative": "",
      "street_name": "ЛЮБЛАНА",
      "street_no": "1",
      "vhod": "a",
    },
  ],
}
`;

exports[`Test people data retrieval should get people from db with pagination 1`] = `
Object {
  "data": Array [
    Object {
      "apartment": 0,
      "blok": "0",
      "car_ids": Array [],
      "city": "РУСЕ",
      "client_name": "Юрий Николов Величков",
      "egn": "6104266565",
      "floor": 1,
      "id": 9213,
      "mobile": "0889827210",
      "municipality_name": "Русе",
      "phone": "9294130",
      "postcode": 7000,
      "region_name": "РУСЕ",
      "representative": "",
      "street_name": "СЛАВЯНСКИ",
      "street_no": "14",
      "vhod": "1",
    },
    Object {
      "apartment": 2,
      "blok": "18",
      "car_ids": Array [],
      "city": "СИЛИСТРА",
      "client_name": "First Middle Last",
      "egn": "6310305565",
      "floor": 1,
      "id": 9219,
      "mobile": "0891043493",
      "municipality_name": "Силистра",
      "phone": "02830123",
      "postcode": 7500,
      "region_name": "СИЛИСТРА",
      "representative": "",
      "street_name": "ГЕНЕРАЛ  СКОБЕЛЕВ",
      "street_no": "",
      "vhod": "А",
    },
  ],
  "total": 1030889,
}
`;

exports[`Test people data retrieval should get people from db with pagination and sorting 1`] = `
Object {
  "data": Array [
    Object {
      "apartment": 0,
      "blok": "0",
      "car_ids": Array [],
      "city": "РУСЕ",
      "client_name": "Юрий Николов Величков",
      "egn": "6104266565",
      "floor": 1,
      "id": 9213,
      "mobile": "0889827210",
      "municipality_name": "Русе",
      "phone": "9294130",
      "postcode": 7000,
      "region_name": "РУСЕ",
      "representative": "",
      "street_name": "СЛАВЯНСКИ",
      "street_no": "14",
      "vhod": "1",
    },
    Object {
      "apartment": 2,
      "blok": "18",
      "car_ids": Array [],
      "city": "СИЛИСТРА",
      "client_name": "First Middle Last",
      "egn": "6310305565",
      "floor": 1,
      "id": 9219,
      "mobile": "0891043493",
      "municipality_name": "Силистра",
      "phone": "02830123",
      "postcode": 7500,
      "region_name": "СИЛИСТРА",
      "representative": "",
      "street_name": "ГЕНЕРАЛ  СКОБЕЛЕВ",
      "street_no": "",
      "vhod": "А",
    },
  ],
  "total": 1030889,
}
`;
